fix: dark mode social icons

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -193,12 +193,6 @@ a {
                 padding: 4px;
                 transform: scale(1.2);
             }
-            .fa-file-alt {
-                .darkresume{
-                    padding: 4px;
-                    transform: scale(1.2);
-                }
-            }
         }
     }
 }
@@ -212,8 +206,7 @@ a {
 
 .darkresume{
     color: white;
-    height: 9px;
-    width: auto;
+    margin-top: 1px;
 }
 
 .icon {
